@@ -1,5 +1,5 @@
 /* Get abbreviation at given offset.
-   Copyright (C) 2003, 2004, 2005 Red Hat, Inc.
+   Copyright (C) 2003, 2004, 2005, 2006 Red Hat, Inc.
    This file is part of Red Hat elfutils.
    Written by Ulrich Drepper <drepper@redhat.com>, 2003.
 
@@ -58,7 +58,7 @@
 
 
 Dwarf_Abbrev *
-internal_function_def
+internal_function
 __libdw_getabbrev (dbg, cu, offset, lengthp, result)
      Dwarf *dbg;
      struct Dwarf_CU *cu;
